--- a/myCSS.css
+++ b/myCSS.css
@@ -1,48 +1,47 @@
 @charset "UTF-8";
 /* This is a comment! Text here will be ignored by the browser. */
 body {
-	margin: 0 auto;
 	 font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-	
+margin: 0 auto;
 }
 .homePage {
-	background: #99F0CF;
+background: #222222;
 }
 .container {
-	width: 960px;
-	margin: 0 auto;
+width: 960px;
+margin: 0 auto;
 }
 .header {
-	background: #F0A899;
-	text-align: center;
-	margin: 0px;
-	padding: 5;
-	float: left;
-	width: 100%;
-	height: 80px;
-	
+background: #AAAAAA;
+text-align: center;
+margin: 0px;
+padding: 5;
+float: left;
+width: 100%;
+height: 80px;
 }
 .nav {
-	background: #58A386;
-	margin: 0px;
-	padding: 5;
-	float: left;
-	width: 100%;
-	height: 60px;
-	text-align: center;
+background: #BBBBBB;
+margin: 0px;
+padding: 5;
+float: left;
+width: 100%;
+height: 60px;
+text-align: center;
 }
 .content {
-	background: #E4E0E5;
-	margin: 0px;
-	float: left;
-	width: 100%;
-	text-align: center;
+background: #EEEEEE;
+margin: 0px;
+float: left;
+width: 100%;
+height: 400px;
+text-align: center;
 }
 .footer {
-	background: #BDFFE6;
-	margin: 0px;
-	float: left;
-	width: 100%;
-	height: 50px;
-	text-align: center;
+background: #777777;
+margin: 0px;
+float: left;
+width: 100%;
+height: 50px;
+text-align: center;
 }
